# farol

./: .coveragerc  .dockerignore  .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  demo_property_appreciation.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  run.py  test_additional_costs.py  test_api_additional_costs.py  test_fixed_calculations.py  test_functionality_demo.py  test_inflation.py  test_property_appreciation.py  test_scenario_specific_appreciation.py  test_separate_inflation.py
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: ci.yml
backend/: Dockerfile
backend/app/: __init__.py  config.py  finance.py  main.py  models.py
backend/app/api/: __init__.py  errors.py  input_normalization.py  middleware.py
backend/app/api/routers/: __init__.py  exports.py  simulations.py  tools.py
backend/app/core/: __init__.py  amortization.py  costs.py  emergency_fund.py  fgts.py  fire.py  inflation.py  investment.py  protocols.py  rates.py  stress_test.py  vehicles.py
backend/app/domain/: __init__.py  mappers.py  models.py
backend/app/loans/: __init__.py  base.py  price.py  sac.py
backend/app/scenarios/: __init__.py  base.py  buy.py  comparison.py  invest_then_buy.py  rent_and_invest.py
backend/app/tests/: conftest.py  test_api_metrics_summary.py  test_export_parity_total_savings.py  test_export_xlsx_smoke.py  test_external_savings.py  test_invest_then_buy_regressions.py  test_rent_reduces_investment.py  test_roi_adjusted.py
backend/scripts/: check_final_wealth.py
backend/tests/: __init__.py  test_additional_costs_calc.py  test_additional_costs_scenarios.py  test_annual_inflation_logic.py  test_api_additional_costs.py  test_api_no_cache_headers.py  test_bonus_13_salario_amortizations.py  test_buy_respects_property_appreciation_rate.py  test_calculation_regressions.py  test_compare_enhanced_validation_monthly_external_savings.py  test_contribution_scenario_scoping.py  test_emergency_fund.py  test_fgts_accounting.py  test_finance.py  test_fire.py  test_inflation_params.py  test_invest_buy_fgts_upfront_rule.py  test_invest_buy_outflow_accounting.py  test_invest_loan_difference_fgts_baseline.py  test_invest_then_buy_appreciation.py  test_investment_withdrawal_principal_loss.py  test_new_metrics.py  test_progress_milestones.py  test_property_appreciation_zero_rate.py  test_rent_property_appreciation.py  test_rent_shortfall_accounting.py  test_scenario_appreciation.py  test_separate_inflation_params.py  test_stress_test.py  test_surplus_not_auto_invested.py  test_total_savings.py  test_total_savings_additional_costs_consistency.py  test_vehicle_compare.py
docs/: calculations.md  glossary.md  quickstart.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: patch-rollup.js
frontend/src/: App.tsx  env.d.ts  main.tsx  theme.ts
frontend/src/api/: client.ts  financeApi.ts  toolsApi.ts  types.ts
frontend/src/components/: AmortizationsFieldArray.tsx  BatchComparisonResults.tsx  ComparisonForm.tsx  ComparisonResults.tsx  EnhancedComparisonResults.tsx  FeaturesGrid.tsx  Hero.tsx  InsightsDashboard.tsx  InvestmentReturnsFieldArray.tsx  LabelWithHelp.tsx  Layout.tsx  LoanResults.tsx  LoanSimulationForm.tsx  ParameterComparisonTable.tsx  PresetCompareSelector.tsx  PresetManager.tsx  PresetTagSelector.tsx  QuickStartSteps.tsx  SampleGrowthChart.tsx  SensitivityChart.tsx  StatsGroup.tsx
frontend/src/components/cards/: BadgeCard.tsx  CardWithStats.tsx  FeaturesCard.tsx  (+2 more)
frontend/src/hooks/: useApi.ts  usePresets.ts
frontend/src/routes/: About.tsx  EmergencyFund.tsx  Fire.tsx  Home.tsx  LoanSimulation.tsx  ScenarioComparison.tsx  StressTest.tsx  Vehicles.tsx
frontend/src/styles/: glass.ts  global.css
frontend/src/types/: react.ts
frontend/src/utils/: colors.ts  download.ts  format.ts  presets.ts
(+12 files in other folders)
