[project]
name = "farol-finance"
version = "0.1.0"
description = "Farol: plataforma de simulação e planejamento financeiro (imóveis inicialmente)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "python-multipart>=0.0.9",
    "requests>=2.32.4",
    "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend"]

[project.optional-dependencies]
dev = ["pytest>=8.4.1", "pytest-cov>=5.0.0"]

# Removed legacy dependency-groups section in favor of PEP 621 optional-dependencies
